fix: enhance file upload security